--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
   	<name>MemberYourNot</name>
   	<url>http://moosemanstudios.com</url>
   	<description>Remove ability to set home in a worldguard region your not a member in</description>
-  	<packaging>jar</packaging>
+  	<version>1.0.1</version>
 
   	<!--  properties -->
   	<properties>
     	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    	<bukkitVersion>1.6.2-R0.1</bukkitVersion>
+    	<bukkitVersion>1.7.2-R0.3</bukkitVersion>
   	</properties>
 
 	<!--  repositories -->
@@ -29,7 +29,7 @@
 			<url>http://repo.mcstats.org/content/repositories/public</url>
 		</repository>
 		<repository>
-			<id>Worldguard</id>
+			<id>sk89q</id>
 			<url>http://maven.sk89q.com/repo/</url>
 		</repository>
 	</repositories>
@@ -51,9 +51,15 @@
 		<dependency>
 			<groupId>com.sk89q</groupId>
 			<artifactId>worldguard</artifactId>
-			<version>5.8-SNAPSHOT</version>
+			<version>5.9</version>
 			<scope>provided</scope>
 		</dependency>
+        <dependency>
+            <groupId>com.sk89q</groupId>
+            <artifactId>worldedit</artifactId>
+            <version>5.6</version>
+            <scope>provided</scope>
+        </dependency>
   	</dependencies>
 
 <!-- Build configuration -->
